2014-05-31  Bob Halley  <halley@dnspython.org>

	* dns/ipv6.py: Add is_mapped()

	* dns/reversename.py: Lookup IPv6 mapped IPv4 addresses in the v4
	  reverse namespace.  Thanks to Devin Bayer.  Yes, I finally fixed
	  this one :)

2014-04-11  Bob Halley  <halley@dnspython.org>

	* dns/zone.py: Do not put back an unescaped token.  This was
	  causing escape processing for domain names to break.  Thanks to
	  connormclaud for reporting the problem.

2014-04-04  Bob Halley  <halley@dnspython.org>

	* dns/message.py: Making a response didn't work correctly if the
	  query was signed with TSIG and we knew the key.  Thanks to Jeffrey
	  Stiles for reporting the problem.

2013-12-11  Bob Halley  <halley@dnspython.org>

	* dns/query.py: Fix problems with the IXFR state machine which caused
	  long diffs to fail.  Thanks to James Raftery for the fix and the
	  repeated prodding to get it applied :)

2013-09-02  Bob Halley  <halley@dnspython.org>

	* (Version 1.11.1 released)

2013-09-01  Bob Halley  <halley@dnspython.org>

	* dns/tsigkeyring.py (to_text): we want keyname.to_text(), not
	  dns.name.to_text(keyname).  Thangs to wangwang for the fix.

2013-08-26  Bob Halley  <halley@dnspython.org>

	* dns/tsig.py (sign): multi-message TSIGs were broken for
	  algorithms other than HMAC-MD5 because we weren't passing the
	  right digest module to the HMAC code.  Thanks to salzmdan for
	  reporting the bug.

2013-08-09  Bob Halley  <halley@dnspython.org>

	* dns/dnssec.py (_find_candidate_keys): we tried to extract the
	  key from the wrong variable name.  Thanks to Andrei Fokau for the
	  fix.

2013-07-08  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: we want 'self.retry_servfail' not just
	  retry_servfail.  Reported by many, thanks!  Thanks to
	  Jeffrey C. Ollie for the fix.

2013-07-08  Bob Halley  <halley@dnspython.org>

	* tests/grange.py: fix tests to use older-style print formatting
	  for backwards compatibility with python 2.4.  Thanks to